# indoor-3d-mapping-turtlebot

./: CMakeLists.txt  README.md
datasets/Foyer1/: screenshot-1371021409.cam  screenshot-1371021714.cam  screenshot-1371021771.cam  screenshot-1371021821.cam
goodResults/cs301/: README
goodResults/foyer1-2-6-2_only_planes/: README
goodResults/foyer1_13-17-1_only_planes/: README
goodResults/foyer1_2-4-2_only_planes/: README
goodResults/foyer1_2-6-1_only_planes/: README
goodResults/foyer1_4-6-2_only_planes/: README
results/failure conditions/: cases
src/: capture3d.cpp  clusterProfiling.cpp  common.cpp  common.h  defines.h  includes.h  listener.cpp  listener.h  main.cpp  mainGUI.cpp  mergeClouds.cpp  openni_grabber_sync_test_odom.cpp  pairwiseRegistration.cpp  pairwiseRegistration.h  typedefs.h
